<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_news_title" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_favorites_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_settings_title" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_about_title" />
    </group>

</menu>
